--- a/css/styles.css
+++ b/css/styles.css
@@ -2316,3 +2316,304 @@ footer {
         font-size: 15px;
     }
 }
+
+@media only screen and (max-width: 320px) {
+    .main__container {
+        margin-top: -100px;
+    }
+    .main__content h1 {
+        font-size: 10vw;
+        margin-top: 1px;
+    }
+    .main__content h2 {
+        font-size: 12vw;
+        margin-top: -2rem;
+        color: #feef3c !important;
+    }
+    .main__content p {
+        margin-top: -0.2rem;
+        font-size: 6vw;
+        font-weight: 400;
+        color: #ddd2d2 !important;
+    }
+    .main__btn button {
+        display: flex;
+        align-content: flex-end;
+    }
+    /* Animation */
+    .anim-typewriter {
+        animation: typewriter 2s steps(44) 1s 1 normal both, blinkTextCursor 500ms steps(44) infinite normal;
+    }
+    @keyframes typewriter {
+        from {
+            width: 0;
+        }
+        to {
+            width: 45%;
+        }
+    }
+    @keyframes blinkTextCursor {
+        from {
+            border-right-color: rgba(255, 255, 255, 0);
+        }
+        to {
+            border-right-color: transparent;
+        }
+    }
+    .wave {
+        width: 100%;
+        animation-duration: 15s;
+        animation-name: rotate;
+        animation-iteration-count: infinite;
+    }
+    #main__img {
+        margin-top: -100px;
+        height: 10%;
+        width: 70%;
+        padding-bottom: -1000px;
+    }
+    @keyframes rotate {
+        0% {
+            display: block;
+        }
+        50% {
+            display: block;
+            transform: rotateY(180deg);
+            transition: ease-in
+        }
+        100% {
+            display: block;
+            transform: rotateY(0);
+        }
+    }
+    section .services {
+        height: fit-content;
+        background-attachment: fixed;
+        width: 100%;
+    }
+    .service__tag {
+        padding: 5px 0 0 0;
+    }
+    .service__tag p {
+        color: #000 !important;
+        font-size: 20px;
+        margin-top: 50px;
+    }
+    .service__tag h1 {
+        font-size: 40px;
+        margin-top: 2px;
+    }
+    .container-serve {
+        margin-top: 50px;
+        position: relative;
+        width: 100%;
+        padding: 1px 40px 40px 10px;
+        display: grid;
+        grid-template-columns: auto;
+    }
+    .box-serve {
+        width: 100%;
+        margin: 50px auto;
+    }
+    .container-serve .box-serve {
+        position: relative;
+        height: 400px;
+        margin-left: 2%;
+    }
+    .box-serve .content-serve h3 {
+        margin: 0 0 10px;
+        padding: 0;
+        font-size: 24px;
+        font-weight: 500;
+        color: #ffff !important;
+    }
+    .box-serve .content-serve h2 {
+        position: absolute;
+        top: -60px;
+        right: 20px;
+        margin: 0;
+        padding: 0;
+        font-size: 1em;
+        color: rgba(245, 241, 241, 0.371);
+        transition: 0.5s;
+    }
+    .box-serve:hover .content-serve h2 {
+        top: -10px;
+    }
+    .box-serve .content-serve p {
+        font-size: 15px;
+    }
+    .box-serve:hover .content-serve a {
+        border-radius: 70px;
+    }
+    .box-serve .content-serve a:hover {
+        border-radius: 70px;
+    }
+    .all-in-one {
+        width: 50%;
+    }
+    .all-in-one iframe {
+        display: none;
+    }
+    .values-description {
+        margin-top: -100px;
+        display: grid;
+        grid-template-columns: auto;
+        height: 14vh;
+        padding-top: 1px;
+        justify-content: center;
+        font-size: 4.85VW;
+    }
+    .what-we-have,
+    .what-we-offer {
+        display: grid;
+        grid-template-columns: auto;
+        height: 80vh;
+        row-gap: 20px;
+        justify-content: center;
+        align-items: center;
+        align-content: space-between;
+    }
+    .values-wraper h1 {
+        color: white;
+    }
+    .values-wraper p {
+        font-size: 15px;
+    }
+    .values {
+        width: 90vw;
+        margin: auto;
+    }
+    .values-btn {
+        border: none;
+        width: 40%;
+        text-decoration: none;
+        text-align: center;
+        justify-content: center;
+        margin-top: 50px;
+    }
+    .values-btn a {
+        color: black;
+        font-size: 3.9VW;
+    }
+    .values-btn a:hover {
+        color: #000;
+    }
+    .works-and-clients {
+        height: 200vh;
+    }
+    .work-and-client-header {
+        font-size: 4.3vw;
+        text-decoration-thickness: 2px;
+    }
+    .works-and-clients-text {
+        background-color: #d0cbcb;
+        padding-bottom: 10px;
+        width: 100%;
+        padding: 30px 30px 30px 30px;
+        color: #080808;
+        position: relative;
+    }
+    .works-and-clients-text p {
+        color: rgba(0, 0, 0, 0.987) !important;
+        text-align: center;
+        justify-content: left !important;
+    }
+    .work-sample-grid {
+        background-color: #ffffff;
+        display: grid;
+        justify-content: center;
+        padding-bottom: 400px;
+    }
+    .grid-cointainer {
+        display: grid;
+        grid-template-columns: auto auto;
+        max-width: 400%;
+    }
+    .grid-item {
+        max-width: 100%;
+    }
+    .grid-item h4 {
+        font-family: 'Righteous';
+        font-size: 1vw;
+        font-style: normal;
+        width: 200px;
+        font-weight: 450;
+        line-height: 4.306vw;
+        height: 10.443vh;
+        width: fit-content;
+        color: #e8e6e6;
+    }
+    .grid-item p {
+        font-size: 4.8VW;
+        font-style: normal;
+        line-height: 5.8vw;
+        letter-spacing: 0em;
+    }
+    .contact {
+        width: 100%;
+        height: 15.25rem;
+        background: linear-gradient(180deg, rgb(79, 77, 77) 0%, rgba(255, 255, 255, 0) 100%);
+        border-radius: 50px;
+        padding: 5% 5%;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+    .contact input {
+        width: 7rem;
+        height: 54px;
+        border-radius: 50px;
+        border: none;
+        background: rgba(26, 24, 24, 0.371);
+        padding-left: 10%;
+    }
+    .contact input::placeholder {
+        font-size: 0.8rem;
+    }
+    .input-div {
+        position: relative;
+    }
+    .send-div {
+        width: 1.813rem;
+        height: 54px;
+        background-color: #feef3c;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 10px;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    /* Footer CSS */
+    .footer__link--wrapper .iframez {
+        width: 100%;
+        position: absolute;
+        display: inline-block;
+    }
+    .social__icon--link {
+        color: #fff;
+        font-size: 20px;
+    }
+    .social__media {
+        height: 25%;
+        width: 100%;
+    }
+    .social__media--wrap {
+        width: 100%;
+    }
+    .social__icons {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 200px;
+    }
+    .website__rights {
+        width: 100%;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        font-size: 15px;
+    }
+}
