--- a/contact_us/contact.css
+++ b/contact_us/contact.css
@@ -133,7 +133,7 @@ body {
 
 .navbar__menu .login-container button:hover {
     background-color: rgb(3, 9, 3);
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255) !important;
 }
 
 @media screen and (max-width: 768px) {
@@ -149,8 +149,8 @@ body {
     background-color: #feef3c;
     padding: 14px 32px;
     border: none;
-    border-radius: 24px;
-    color: #1b1b1b;
+    border-radius: 2984px;
+    color: #ffffff;
     margin-top: 2rem;
     cursor: pointer;
     position: relative;
