--- a/css/styles.css
+++ b/css/styles.css
@@ -1698,8 +1698,7 @@ footer {
 }
 
 @media only screen and (max-width: 768px) {
-    body,
-    html {
+    body {
         overflow-x: hidden;
     }
     .MessageInfo {
@@ -2031,8 +2030,7 @@ footer {
 }
 
 @media only screen and (max-width: 425px) {
-    body,
-    html {
+    body {
         overflow-x: hidden;
     }
     .login-container {
