--- a/contact_us/contact.css
+++ b/contact_us/contact.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
 }
 
-body {
+body,
+html {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -149,7 +150,7 @@ body {
     background-color: #feef3c;
     padding: 14px 32px;
     border: none;
-    border-radius: 2984px;
+    border-radius: 24px;
     color: #ffffff;
     margin-top: 2rem;
     cursor: pointer;
@@ -199,6 +200,89 @@ body {
     color: #feef3c;
     transition: all 0.5s ease;
     text-decoration: underline;
+}
+
+@media screen and (max-width: 960px) {
+    .navbar__container {
+        display: flex;
+        justify-content: space-between;
+        height: 80px;
+        z-index: 1;
+        width: 100%;
+        max-width: 100%;
+        padding: 0;
+    }
+    .navbar__menu {
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        top: -1000px;
+        opacity: 1;
+        transition: all 0.5s ease;
+        height: 50vh;
+        z-index: -1;
+    }
+    .navbar__menu.active {
+        background: #1b1b1b;
+        top: 100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 99;
+        height: 80vh;
+        font-size: 1.6rem;
+    }
+    #navbar__logo {
+        padding-left: 25px;
+    }
+    .navbar__toggle .menubar {
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3s ease-in-out;
+        background: rgba(255, 255, 255, 0);
+    }
+    .navbar__item {
+        width: 100%;
+    }
+    .navbar__links {
+        text-align: center;
+        padding-top: -18rem;
+        width: 100%;
+        display: table;
+        font-size: 1rem;
+    }
+    .navbar__btn {
+        padding-bottom: 2rem;
+    }
+    button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        height: 50px;
+        margin: 0;
+    }
+    #mobile-menu {
+        position: absolute;
+        top: 10%;
+        right: 5%;
+        transform: translate(5%, 20%);
+    }
+    .navbar__toggle .menubar {
+        display: block;
+        cursor: pointer;
+    }
+    #mobile-menu.is-active .bar:nth-child(2) {
+        opacity: 1;
+    }
+    #mobile-menu.is-active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+    #mobile-menu.is-active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
 }
 
 
@@ -466,5 +550,48 @@ button {
     .gmail {
         display: inline-block;
         width: auto;
+    }
+}
+
+@media screen and (min-width: 320px) {
+    .list-item {
+        margin-bottom: 10%;
+    }
+    .contact-list {
+        margin-top: 22%;
+        padding-right: 8%;
+    }
+    .list-item .contact-text a {
+        font-size: 19px;
+        justify-content: center;
+    }
+    .fa-envelope,
+    .gmail {
+        display: inline-block;
+        width: auto;
+    }
+    .footer__container {
+        padding-bottom: 14rem;
+        margin-top: -1rem;
+    }
+    .footer__link--wrapper {
+        margin-top: -7rem;
+    }
+    .footer__link--items {
+        margin-top: 0.5rem;
+        line-height: 2.9rem;
+    }
+    .footer__link--items a {
+        margin-top: 0.1rem;
+    }
+    .website__rights {
+        font-size: 12px;
+        display: flex-end;
+    }
+    .social__icons {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
     }
 }
