--- a/form/form.css
+++ b/form/form.css
@@ -1,29 +1,3 @@
-html,
-body,
-div,
-input,
-span,
-a,
-select,
-textarea,
-option,
-h1,
-h2,
-h3,
-h4,
-main,
-aside,
-article,
-section,
-header,
-p,
-footer,
-nav,
-pre {
-    box-sizing: border-box;
-    font-family: 'Righteous';
-}
-
 input,
 textarea,
 select {
@@ -126,13 +100,14 @@ h1 i {
     border: 0;
     background-color: #feef3c;
     font-weight: bold;
-    color: #fff;
+    color: rgb(0, 0, 0);
     cursor: pointer;
     width: 100%;
 }
 
 .hotel-reservation-form input[type="submit"]:hover {
-    background-color: #feef3c;
+    background-color: #010101;
+    color: #fff;
 }
 
 .hotel-reservation-form input[name="email"] {
@@ -298,7 +273,7 @@ body {
 }
 
 .navbar__menu .login-container button {
-    float: right;
+    float: inline-end;
     padding: 16px 10px;
     margin-top: 8px;
     margin-right: 16px;
@@ -354,6 +329,89 @@ body {
     color: #feef3c;
     transition: all 0.5s ease;
     text-decoration: underline;
+}
+
+@media screen and (max-width: 960px) {
+    .navbar__container {
+        display: flex;
+        justify-content: space-between;
+        height: 80px;
+        z-index: 1;
+        width: 100%;
+        max-width: 100%;
+        padding: 0;
+    }
+    .navbar__menu {
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        top: -1000px;
+        opacity: 1;
+        transition: all 0.5s ease;
+        height: 50vh;
+        z-index: -1;
+    }
+    .navbar__menu.active {
+        background: #1b1b1b;
+        top: 100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 99;
+        height: 80vh;
+        font-size: 1.6rem;
+    }
+    #navbar__logo {
+        padding-left: 25px;
+    }
+    .navbar__toggle .menubar {
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3s ease-in-out;
+        background: rgba(255, 255, 255, 0);
+    }
+    .navbar__item {
+        width: 100%;
+    }
+    .navbar__links {
+        text-align: center;
+        padding-top: -18rem;
+        width: 100%;
+        display: table;
+        font-size: 1rem;
+    }
+    .navbar__btn {
+        padding-bottom: 2rem;
+    }
+    button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        height: 50px;
+        margin: 0;
+    }
+    #mobile-menu {
+        position: absolute;
+        top: 10%;
+        right: 5%;
+        transform: translate(5%, 20%);
+    }
+    .navbar__toggle .menubar {
+        display: block;
+        cursor: pointer;
+    }
+    #mobile-menu.is-active .bar:nth-child(2) {
+        opacity: 1;
+    }
+    #mobile-menu.is-active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+    #mobile-menu.is-active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
 }
 
 
@@ -499,127 +557,5 @@ footer {
     }
     .social__media--wrap {
         flex-direction: column;
-    }
-}
-
-#last {
-    width: 100%;
-    height: auto;
-    justify-content: center;
-    background-color: #1b1b1b;
-}
-
-.full {
-    width: 80%;
-    display: inline-block;
-    margin: 2%;
-    margin-left: 10%;
-    text-align: center;
-    background-color: #100f0f;
-    color: white;
-    border: 15px solid #feef3c;
-    border-radius: 5px;
-    margin-bottom: 8%;
-    margin-top: 8%;
-}
-
-.full h3 {
-    font-size: 2rem;
-    display: block;
-    margin: 2%;
-    margin-bottom: 0;
-}
-
-.lt {
-    padding: 2%;
-    margin: 2%;
-}
-
-.rt {
-    padding: 2%;
-    margin: 2%;
-}
-
-.lt textarea {
-    width: 94%;
-    margin-left: 2.8%;
-}
-
-button {
-    margin: 2%;
-}
-
-.btn-primar {
-    background-color: black;
-    border-radius: 35%;
-}
-
-.btn-primar:hover {
-    background-color: #feef3c;
-    color: #100f0f;
-}
-
-.list-item {
-    margin-bottom: 2%;
-    list-style-type: none;
-}
-
-.list-item span {
-    margin-left: 10px;
-    font-size: 1.4rem;
-}
-
-.list-item a {
-    color: white;
-    display: inline-block;
-}
-
-.list-item a:hover {
-    text-decoration: underline;
-}
-
-.form-control {
-    background-color: black;
-}
-
-@media screen and (min-width: 770px) {
-    .full {
-        width: 70%;
-        margin-left: 15%;
-    }
-    .lt textarea {
-        width: 95%;
-        margin-left: 2.4%;
-    }
-}
-
-@media screen and (min-width: 1100px) {
-    .full {
-        width: 65%;
-        margin-left: 17%;
-        margin-top: 5%;
-    }
-    .lt {
-        width: 55%;
-        display: inline-block;
-        float: left;
-        margin-right: 0;
-    }
-    .rt {
-        width: 35%;
-        display: inline-block;
-        margin-left: 0;
-    }
-    .list-item {
-        margin-bottom: 10%;
-    }
-    .contact-list {
-        margin-top: 22%;
-        padding-right: 8%;
-    }
-    .fa-envelope,
-    .gmail {
-        display: inline-block;
-        width: auto;
     }
 }
