--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 body {
     background-color: #1b1b1c;
-    font-family: '';
+    font-family: 'Righteous';
     max-width: 100%;
     margin: 0;
     padding: 0;
