--- a/scss/styless.scss
+++ b/scss/styless.scss
@@ -15,7 +15,7 @@ $animationSpeed: 40s;
 
 // Styling
 .slider {
-    background: white;
+    background: rgb(44, 43, 43);
     box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
     height: 100px;
     margin: auto;
