--- a/css/styles.css
+++ b/css/styles.css
@@ -1069,7 +1069,7 @@ section button {
     background-attachment: fixed;
     background-size: cover;
     padding: 140px 0px;
-    height: 200vh;
+    height: 150vh;
     font-family: "Righteous";
 }
 
@@ -1085,6 +1085,7 @@ section button {
 
 .values-wraper h1 {
     color: #f0f0ef;
+    margin-top: -100px;
 }
 
 .values-wraper p {
@@ -1179,6 +1180,20 @@ h6 {
     margin-right: auto;
     margin-left: auto;
     margin-top: 1px;
+    font-family: 'Righteous';
+}
+
+section .sectio {
+    font-family: 'Righteous';
+    font-size: 25px;
+    text-transform: capitalize;
+    font-weight: 500;
+    color: #070707;
+    margin: 0 0 5px;
+    position: relative;
+    text-decoration: line-through;
+    text-decoration-color: #feef3c;
+    text-align: center !important;
 }
 
 .section-title {
@@ -1194,10 +1209,11 @@ h6 {
     font-size: 35px;
     text-transform: capitalize;
     font-weight: 700;
-    color: #feef3c;
+    color: #ffffff;
     margin: 0 0 5px;
     position: relative;
-    text-decoration: none;
+    text-decoration: underline;
+    text-decoration-color: #feef3c;
 }
 
 .container .section-title h1::before {
@@ -1404,7 +1420,7 @@ h6 {
     text-decoration: none;
     padding: 10px;
     background-color: #FFF112;
-    margin-top: 100px;
+    margin-top: 10px;
     cursor: pointer;
     position: relative;
     left: 33vw;
@@ -1448,7 +1464,6 @@ p {
     text-decoration: line-through;
     text-decoration-color: #feef3c;
     line-height: 3.463vw;
-    letter-spacing: 0.12em;
     justify-content: left;
     text-align: center;
     color: #0a0a0a;
@@ -1568,85 +1583,6 @@ p {
 
 /* Footer CSS */
 
-footer {
-    display: flex;
-    justify-content: space-between;
-}
-
-.footer__container {
-    background-color: #141414;
-    padding: 5rem 5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: stretch;
-    padding-bottom: 4rem;
-    float: right;
-    width: 100%;
-    bottom: 0;
-    margin: 0 auto;
-    line-height: auto;
-}
-
-#footer__logo {
-    color: #fff;
-    display: flex;
-    align-items: left;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 1rem;
-}
-
-.footer__logo img {
-    height: 163px;
-    width: 163px;
-    border-radius: 0px;
-    background-position: o 100%;
-}
-
-.footer__links {
-    width: 100%;
-    height: 40vh;
-    max-width: 10000000px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 auto;
-}
-
-.footer__link--wrapper {
-    display: flex;
-}
-
-.footer__link--items {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 16px;
-    text-align: left;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.footer__link--items h2 {
-    margin-bottom: 16px;
-}
-
-.footer__link--items>h2 {
-    color: #fff;
-}
-
-.footer__link--items a {
-    color: #fff;
-    text-decoration: none;
-    margin-bottom: 0.5rem;
-}
-
-.footer__link--items a:hover {
-    color: #feef3c;
-    transition: 0.3s ease-out;
-}
-
 
 /* Social Icons */
 
@@ -1693,67 +1629,83 @@ footer {
     padding-right: 50px;
 }
 
-
-/* Contact Section */
-
-.contact-section {
-    padding: 5%;
-    color: #fff;
-    margin-left: 10px;
-    background-color: whitesmoke;
+.footer-logo-container img {
+    height: 11.206vw;
+    width: 11.206vw;
 }
 
-.contact {
-    width: 100%;
-    height: 15.25rem;
-    background: linear-gradient(180deg, rgb(79, 77, 77) 0%, rgba(255, 255, 255, 0) 100%);
-    border-radius: 1007px;
-    padding: 5% 5%;
+.footer-logo-container {
+    padding-top: -900px;
+}
+
+.footer-and-sponsors {
+    background-color: #080808;
+}
+
+.footer {
+    height: 50vh;
+    width: 100vw;
+    margin: auto;
+}
+
+.footer,
+.footer-links {
     display: flex;
-    align-items: center;
-    gap: 20px;
+    justify-content: space-between;
+    padding: auto;
+    background-color: #080808;
 }
 
-.contact h5 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-    color: white;
+.footer-links {
+    width: 100vw;
+    padding-top: 100px;
+    padding-right: 150px;
+    font-family: 'Righteous';
+    font-size: .96VW;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 37px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #ffff;
 }
 
-.contact p {
-    font-size: 1rem;
+.footer-links a {
+    color: #ffff;
+    text-decoration: none;
 }
 
-.contact input {
-    width: 32rem;
-    height: 54px;
-    border-radius: 50px;
-    border: none;
-    background: rgba(26, 24, 24, 0.371);
-    padding-left: 10%;
+.footer-links a:hover {
+    color: #feef3c;
 }
 
-.contact input::placeholder {
-    font-size: 1rem;
-    color: #fff;
-    opacity: 34%;
+.location {
+    padding-top: -1000px;
 }
 
-.input-div {
-    position: relative;
-}
-
-.send-div {
-    width: 5.813rem;
-    height: 54px;
-    background-color: #feef3c;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
-    position: absolute;
-    right: 0;
-    top: 0;
+@media screen and (max-width: 1000px) {
+    .footer {
+        flex-direction: column;
+        background-color: black;
+        width: fit-content;
+        height: fit-content;
+    }
+    .footer-logo-container {
+        width: 97vw;
+        text-align: center;
+    }
+    .footer-logo-container img {
+        height: 163px;
+        width: 163px;
+        border-radius: 0px;
+    }
+    .footer-links {
+        font-size: 9px;
+        width: 80vw;
+        margin: auto;
+        background-color: black;
+        margin-bottom: 20px;
+    }
 }
 
 
@@ -2014,76 +1966,6 @@ footer {
         font-style: normal;
         line-height: 2.8vw;
         letter-spacing: 0em;
-    }
-    .contact {
-        width: 100%;
-        height: 15.25rem;
-        background: linear-gradient(180deg, rgb(79, 77, 77) 0%, rgba(255, 255, 255, 0) 100%);
-        border-radius: 50px;
-        padding: 5% 5%;
-        display: flex;
-        align-items: center;
-        gap: 20px;
-    }
-    .contact input {
-        width: 17rem;
-        height: 54px;
-        border-radius: 50px;
-        border: none;
-        background: rgba(26, 24, 24, 0.371);
-        padding-left: 10%;
-    }
-    .contact input::placeholder {
-        font-size: 0.8rem;
-    }
-    .input-div {
-        position: relative;
-    }
-    .send-div {
-        width: 5.813rem;
-        height: 54px;
-        background-color: #feef3c;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 50px;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    /* Footer CSS */
-    footer {
-        display: flex;
-        justify-content: space-between;
-    }
-    .footer__logo img {
-        height: 163px;
-        width: 163px;
-        border-radius: 0px;
-        background-position: o 100%;
-        margin-top: -200px;
-    }
-    .footer__links {
-        width: 100%;
-        height: 90vh;
-        max-width: 10000px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin: 1px auto;
-    }
-    .footer__link--wrapper {
-        display: flex;
-    }
-    .footer__link--items {
-        text-align: left;
-    }
-    .footer__link--items h2 {
-        margin-bottom: 2px;
-    }
-    .social__icon--link {
-        color: #fff;
-        font-size: 24px;
     }
     .social__media {
         height: 25%;
